Steady state on syntax-theme demo

--- a/_includes/demo/syntax-theme-swatches.html
+++ b/_includes/demo/syntax-theme-swatches.html
@@ -1,198 +1,330 @@
-<div class="columns is-variable is-1 is-vcentered is-multiline">
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-container-color">bg</div>
+<h4 class="no-toc">Background and Text</h4>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-container-color">container</div>
     </div>
-    <div class="column is-1">
+    <div class="column">
         <div class="yolo-swatch syntax-text-color">text</div>
     </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-highlight-line-color">hll</div>
+</div>
+<h4 class="no-toc">Name Tokens</h4>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-name-color">name (n)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-name-attribute-color">name-attribute (na)</div>
     </div>
 </div>
-<div class="columns is-variable is-1 is-vcentered is-multiline">
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-error-color">err</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-name-builtin-pseudo-color">name-builtin-pseudo (bq)</div>
     </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-punctuation-color">p</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-text-whitespace-color">w</div>
+    <div class="column">
+        <div class="yolo-swatch syntax-name-builtin-color">name-builtin (nb)</div>
     </div>
 </div>
-<div class="columns is-variable is-1 is-vcentered is-multiline">
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-comment-color">c</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-name-class-color">name-class (nc)</div>
     </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-comment-hashbang-color">ch</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-comment-multiline-color">cm</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-comment-preproc-color">cp</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-comment-preprocfile-color">cpf</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-comment-single-color">c1</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-comment-special-color">cs</div>
+    <div class="column">
+        <div class="yolo-swatch syntax-name-constant-color">name-constant (no)</div>
     </div>
 </div>
-<div class="columns is-variable is-1 is-vcentered is-multiline">
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-generic-deleted-color">gd</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-name-decorator-color">name-decorator (nd)</div>
     </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-generic-emph-color">ge</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-generic-error-color">ge</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-generic-heading-color">gh</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-generic-inserted-color">gi</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-generic-output-color">go</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-generic-prompt-color">gp</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-generic-strong-color">gs</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-generic-subheading-color">gu</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-generic-traceback-color">gt</div>
+    <div class="column">
+        <div class="yolo-swatch syntax-name-entity-color">name-entity (ni)</div>
     </div>
 </div>
-<div class="columns is-variable is-1 is-vcentered is-multiline">
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-keyword-color">k</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-name-exception-color">name-exception (ne)</div>
     </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-keyword-constant-color">kc</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-keyword-declaration-color">kd</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-keyword-namespace-color">kn</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-keyword-pseudo-color">kp</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-keyword-reserved-color">kr</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-keyword-type-color">kt</div>
+    <div class="column">
+        <div class="yolo-swatch syntax-name-function-magic-color">name-function-magic (fm)</div>
     </div>
 </div>
-<div class="columns is-variable is-1 is-vcentered is-multiline">
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-literal-color">l</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-name-function-color">name-function (nf)</div>
     </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-literal-date-color">ld</div>
-    </div>
-</div>
-<div class="columns is-variable is-1 is-vcentered is-multiline">
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-color">n</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-attribute-color">na</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-builtin-pseudo-color">bq</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-builtin-color">nb</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-class-color">nc</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-constant-color">no</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-decorator-color">nd</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-entity-color">ni</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-exception-color">ne</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-function-magic-color">fm</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-function-color">nf</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-label-color">nl</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-namespace-color">nn</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-other-color">nx</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-tag-color">nt</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-variable-color">nv</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-variable-class-color">vc</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-variable-global-color">vg</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-name-variable-instance-color">vi</div>
+    <div class="column">
+        <div class="yolo-swatch syntax-name-label-color">name-label (nl)</div>
     </div>
 </div>
-<div class="columns is-variable is-1 is-vcentered is-multiline">
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-number-color">m</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-name-namespace-color">name-namespace (nn)</div>
     </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-number-bin-color">mb</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-number-float-color">mf</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-number-hex-color">mh</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-number-integer-long-color">il</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-number-integer-color">mi</div>
-    </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-number-oct-color">mo</div>
+    <div class="column">
+        <div class="yolo-swatch syntax-name-other-color">name-other (nx)</div>
     </div>
 </div>
-<div class="columns is-variable is-1 is-vcentered is-multiline">
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-operator-color">o</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-name-property-color">name-property (py)</div>
     </div>
-    <div class="column is-1">
-        <div class="yolo-swatch syntax-operator-word-color">ow</div>
+    <div class="column">
+        <div class="yolo-swatch syntax-name-tag-color">name-tag (nt)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-name-variable-color">name-variable (nv)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-name-variable-class-color">name-variable-class (vc)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-name-variable-global-color">name-variable-global (vg)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-name-variable-instance-color">name-variable-instance (vi)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-name-variable-magic-color">name-variable-magic (vm)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch primary-color">&nbsp;</div>
+    </div>
+</div>
+<h4 class="no-toc">String Tokens</h4>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-string-color">string (s)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-string-single-color">string-single (s1)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-string-double-color">string-double (s2)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-string-affix-color">string-affix (sa)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-string-backtick-color">string-backtick (sb)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-string-char-color">string-char (sc)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-string-doc-color">string-doc (sd)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-string-escape-color">string-escape (se)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-string-heredoc-color">string-heredoc (sh)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-string-interpol-color">string-interpol (si)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-string-regex-color">string-regex (sr)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-string-symbol-color">string-symbol (ss)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-string-other-color">string-other (sx)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch primary-color">&nbsp;</div>
+    </div>
+</div>
+<h4 class="no-toc">Generic Tokens</h4>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-generic-deleted-color">generic-deleted (gd)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-generic-emph-color">generic-emph (ge)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-generic-error-color">generic-error (ge)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-generic-heading-color">generic-heading (gh)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-generic-inserted-color">generic-inserted (gi)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-generic-output-color">generic-output (go)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-generic-prompt-color">generic-prompt (gp)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-generic-strong-color">generic-strong (gs)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-generic-subheading-color">generic-subheading (gu)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-generic-traceback-color">generic-traceback (gt)</div>
+    </div>
+</div>
+<h4 class="no-toc">Comment Tokens</h4>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-comment-color">comment (c)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-comment-hashbang-color">comment-hashbang (ch)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-comment-multiline-color">comment-multiline (cm)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-comment-preproc-color">comment-preproc (cp)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-comment-preprocfile-color">comment-preprocfile (cpf)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-comment-single-color">comment-single (c1)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-comment-special-color">comment-special (cs)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch primary-color">&nbsp;</div>
+    </div>
+</div>
+<h4 class="no-toc">Keyword Tokens</h4>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-keyword-color">keyword (k)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-keyword-constant-color">keyword-constant (kc)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-keyword-declaration-color">keyword-declaration (kd)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-keyword-namespace-color">keyword-namespace (kn)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-keyword-pseudo-color">keyword-pseudo (kp)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-keyword-reserved-color">keyword-reserved (kr)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-keyword-type-color">keyword-type (kt)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch primary-color">&nbsp;</div>
+    </div>
+</div>
+<h4 class="no-toc">Number Tokens</h4>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-number-color">number (m)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-number-bin-color">number-bin (mb)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-number-float-color">number-float (mf)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-number-hex-color">number-hex (mh)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-number-integer-long-color">number-integer-long (il)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-number-integer-color">number-integer (mi)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-number-oct-color">number-oct (mo)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch primary-color">&nbsp;</div>
+    </div>
+</div>
+<h4 class="no-toc">Error and Misc Tokens</h4>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-error-color">error (err)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-punctuation-color">punctuation (p)</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-text-whitespace-color">whitespace (w)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-highlight-line-color">highlight-line (hll)</div>
+    </div>
+</div>
+<h4 class="no-toc">Literal and Date Tokens</h4>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-literal-color">literal (l)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-literal-date-color">literal-date (ld)</div>
+    </div>
+</div>
+<h4 class="no-toc">Operator Tokens</h4>
+<div class="columns">
+    <div class="column">
+        <div class="yolo-swatch syntax-operator-color">operator (o)</div>
+    </div>
+    <div class="column">
+        <div class="yolo-swatch syntax-operator-word-color">operator-word (ow)</div>
     </div>
 </div>
