--- a/_sass/yolo/brand/_all.scss
+++ b/_sass/yolo/brand/_all.scss
@@ -2,5 +2,6 @@
 // ----------------------------------------------------------------------------
 // Brand scss module
 // ----------------------------------------------------------------------------
+@import "colors";
 @import "theme";
 @import "syntax";
