--- a/_sass/yolo/components/_other.scss
+++ b/_sass/yolo/components/_other.scss
@@ -17,44 +17,46 @@
   border-radius: 0.20rem;
   padding: .25rem .5rem;
   position: relative;
-  text-align: center;
+  text-align: left;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
-//.yolo-tooltip {
-//  position: relative;
-//  .tooltip-text {
-//    visibility: hidden;
-//    width: 120px;
-//    background-color: #fff;
-//    color: #000;
-//    text-align: center;
-//    border-radius: 6px;
-//    padding: 5px;
-//    position: absolute;
-//    z-index: 100;
-//    top: 150%;
-//    left: 50%;
-//    margin-left: -60px;
-//    &::after {
-//      content: "";
-//      position: absolute;
-//      bottom: 100%;
-//      left: 50%;
-//      margin-left: -7px;
-//      border-width: 7px;
-//      border-style: solid;
-//      border-top-color: transparent;
-//      border-right-color: transparent;
-//      border-left-color: transparent;
-//      border-bottom-color: white;
-//    }
-//  }
-//  &:hover {
-//    .tooltip-text {
-//      visibility: visible;
-//    }
-//  }
-//}
+.yolo-tooltip {
+  position: relative;
+  .tooltip-text {
+    visibility: hidden;
+    width: 120px;
+    background-color: #fff;
+    color: #000;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 100;
+    top: 150%;
+    left: 50%;
+    margin-left: -60px;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      margin-left: -7px;
+      border-width: 7px;
+      border-style: solid;
+      border-top-color: transparent;
+      border-right-color: transparent;
+      border-left-color: transparent;
+      border-bottom-color: white;
+    }
+  }
+  &:hover {
+    .tooltip-text {
+      visibility: visible;
+    }
+  }
+}
 
 // Yolo page header
 .yolo-header {
