theme sass cleanup

--- a/_includes/demo/theme-swatches.html
+++ b/_includes/demo/theme-swatches.html
@@ -1,53 +1,53 @@
 <div class="columns">
 	<div class="column">
-		<div class="cell primary-color">primary-color</div>
+		<div class="cell primary-color is-family-monospace">primary-color</div>
 	</div>
 	<div class="column">
-		<div class="cell on-primary-color">on-primary-color</div>
+		<div class="cell on-primary-color is-family-monospace">on-primary-color</div>
 	</div>	
 </div>
 <div class="columns">
 	<div class="column">
-		<div class="cell primary-container-color">primary-container-color</div>
+		<div class="cell primary-container-color is-family-monospace">primary-container-color</div>
 	</div>
 	<div class="column">
-		<div class="cell on-primary-container-color">on-primary-container-color</div>
+		<div class="cell on-primary-container-color is-family-monospace">on-primary-container-color</div>
 	</div>	
 </div>
 <div class="columns">
 	<div class="column">
-		<div class="cell secondary-color">secondary-color</div>
+		<div class="cell secondary-color is-family-monospace">secondary-color</div>
 	</div>
 	<div class="column">
-		<div class="cell on-secondary-color">on-secondary-color</div>
+		<div class="cell on-secondary-color is-family-monospace">on-secondary-color</div>
 	</div>	
 </div>
 <div class="columns">
 	<div class="column">
-		<div class="cell primary-container-color">secondary-container-color</div>
+		<div class="cell primary-container-color is-family-monospace">secondary-container-color</div>
 	</div>
 	<div class="column">
-		<div class="cell on-primary-container-color">on-secondary-container-color</div>
+		<div class="cell on-primary-container-color is-family-monospace">on-secondary-container-color</div>
 	</div>	
 </div>
 <div class="columns">
 	<div class="column">
-		<div class="cell tertiary-color">tertiary-color</div>
+		<div class="cell tertiary-color is-family-monospace">tertiary-color</div>
 	</div>
 	<div class="column">
-		<div class="cell on-tertiary-color">on-tertiary-color</div>
+		<div class="cell on-tertiary-color is-family-monospace">on-tertiary-color</div>
 	</div>	
 </div>
 <div class="columns">
 	<div class="column">
-		<div class="cell link-color">link-color</div>
+		<div class="cell link-color is-family-monospace">link-color</div>
 	</div>
 </div>
 <div class="columns">
 	<div class="column">
-		<div class="cell neutral-color">neutral-color</div>
+		<div class="cell neutral-color is-family-monospace">neutral-color</div>
 	</div>
 	<div class="column">
-		<div class="cell on-neutral-color">on-neutral-color</div>
+		<div class="cell on-neutral-color is-family-monospace">on-neutral-color</div>
 	</div>	
 </div>
