--- a/_sass/yolo/brand/theme/_bubblegum.scss
+++ b/_sass/yolo/brand/theme/_bubblegum.scss
@@ -13,7 +13,7 @@ $light-secondary-container-color: #c9184b;
 $light-on-secondary-container-color: #fff0f3;
 // tertiary colors
 $light-tertiary-color: #ff87bd;
-$light-on-tertiary-color: #fff0f3;
+$light-on-tertiary-color: #c9184b;
 // general colors
 $light-link-color: #ff87bd;
 $light-neutral-color: #212121;
