--- a/_sass/yolo/components/_other.scss
+++ b/_sass/yolo/components/_other.scss
@@ -8,9 +8,7 @@
   padding: 1rem;
 }
 
-// ----------------------------------------------------------------------------
-// Cells for Flexbox items
-// ----------------------------------------------------------------------------
+// Color swatch
 .yolo-swatch {
   background-color: inherit;
   color: inherit;
@@ -20,42 +18,6 @@
   text-align: left;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-}
-
-.yolo-tooltip {
-  position: relative;
-  .tooltip-text {
-    visibility: hidden;
-    width: 120px;
-    background-color: #fff;
-    color: #000;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px;
-    position: absolute;
-    z-index: 100;
-    top: 150%;
-    left: 50%;
-    margin-left: -60px;
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 100%;
-      left: 50%;
-      margin-left: -7px;
-      border-width: 7px;
-      border-style: solid;
-      border-top-color: transparent;
-      border-right-color: transparent;
-      border-left-color: transparent;
-      border-bottom-color: white;
-    }
-  }
-  &:hover {
-    .tooltip-text {
-      visibility: visible;
-    }
-  }
 }
 
 // Yolo page header
@@ -149,6 +111,60 @@
   font-weight: bold;
   border-radius: 3rem;
 }
+
+// tab styling
+//.yolo-tab {
+//  overflow: hidden;
+//  border: 1px solid #ccc;
+//  background-color: #f1f1f1;
+//}
+
+///* Style the buttons that are used to open the tab content */
+//.yolo-tab button {
+//  background-color: inherit;
+//  float: left;
+//  border: none;
+//  outline: none;
+//  cursor: pointer;
+//  padding: 14px 16px;
+//  transition: 0.3s;
+//}
+//
+///* Change background color of buttons on hover */
+//.yolo-tab button:hover {
+//  background-color: #ddd;
+//}
+//
+///* Create an active/current tablink class */
+//.yolo-tab button.active {
+//  background-color: #ccc;
+//}
+//
+///* Style the tab content */
+//.yolo-tabcontent {
+//  display: none;
+//  padding: 6px 12px;
+//  border: 1px solid #ccc;
+//  border-top: none;
+//}
+
+.yolo-tab {
+  overflow: hidden;
+  button {
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+  }
+}
+.yolo-tab-content {
+  display: none;
+  padding: 6px 12px;
+  border-top: none;
+}
+
 
 // prezo styling
 .yolo-prezo-container {
