WIP tab for swatches

--- a/_includes/demo/syntax-theme-swatches.html
+++ b/_includes/demo/syntax-theme-swatches.html
@@ -1,3 +1,4 @@
+<div class="yolo-syntax-theme-swatches">
 <h4 class="no-toc">Background and Text</h4>
 <div class="columns">
     <div class="column">
@@ -9,15 +10,15 @@
 </div>
 <h4 class="no-toc">Syntax Tokens</h4>
 <div class="yolo-tab">
-    <button class="yolo-tab-links" onclick="openTab(event, 'nameTokens')">Name</button>
-    <button class="yolo-tab-links" onclick="openTab(event, 'stringTokens')">String</button>
-    <button class="yolo-tab-links" onclick="openTab(event, 'commentTokens')">Comment</button>
-    <button class="yolo-tab-links" onclick="openTab(event, 'genericTokens')">Generic</button>
-    <button class="yolo-tab-links" onclick="openTab(event, 'keywordTokens')">Keyword</button>
-    <button class="yolo-tab-links" onclick="openTab(event, 'numberTokens')">Number</button>
-    <button class="yolo-tab-links" onclick="openTab(event, 'miscTokens')">Misc</button>
-    <button class="yolo-tab-links" onclick="openTab(event, 'literalTokens')">Literal</button>
-    <button class="yolo-tab-links" onclick="openTab(event, 'operatorTokens')">Operator</button>
+    <button class="button yolo-tab-links" onclick="openTab(event, 'nameTokens')">Name</button>
+    <button class="button yolo-tab-links" onclick="openTab(event, 'stringTokens')">String</button>
+    <button class="button yolo-tab-links" onclick="openTab(event, 'commentTokens')">Comment</button>
+    <button class="button yolo-tab-links" onclick="openTab(event, 'genericTokens')">Generic</button>
+    <button class="button yolo-tab-links" onclick="openTab(event, 'keywordTokens')">Keyword</button>
+    <button class="button yolo-tab-links" onclick="openTab(event, 'numberTokens')">Number</button>
+    <button class="button yolo-tab-links" onclick="openTab(event, 'miscTokens')">Misc</button>
+    <button class="button yolo-tab-links" onclick="openTab(event, 'literalTokens')">Literal</button>
+    <button class="button yolo-tab-links" onclick="openTab(event, 'operatorTokens')">Operator</button>
 </div>
 <div id="nameTokens" class="yolo-tab-content">
     <h4 class="no-toc">Name Tokens</h4>
@@ -106,7 +107,7 @@
             <div class="yolo-swatch is-family-monospace syntax-name-variable-magic-color">name-variable-magic (vm)</div>
         </div>
         <div class="column">
-            <div class="yolo-swatch is-family-monospace primary-color">&nbsp;</div>
+            <div class="yolo-swatch is-family-monospace primary-container-color">&nbsp;</div>
         </div>
     </div>
 </div>
@@ -165,7 +166,7 @@
             <div class="yolo-swatch is-family-monospace syntax-string-other-color">string-other (sx)</div>
         </div>
         <div class="column">
-            <div class="yolo-swatch is-family-monospace primary-color">&nbsp;</div>
+            <div class="yolo-swatch is-family-monospace primary-container-color">&nbsp;</div>
         </div>
     </div>
 </div>
@@ -200,7 +201,7 @@
             <div class="yolo-swatch is-family-monospace syntax-comment-special-color">comment-special (cs)</div>
         </div>
         <div class="column">
-            <div class="yolo-swatch is-family-monospace primary-color">&nbsp;</div>
+            <div class="yolo-swatch is-family-monospace primary-container-color">&nbsp;</div>
         </div>
     </div>
 </div>
@@ -278,7 +279,7 @@
             <div class="yolo-swatch is-family-monospace syntax-keyword-type-color">keyword-type (kt)</div>
         </div>
         <div class="column">
-            <div class="yolo-swatch is-family-monospace primary-color">&nbsp;</div>
+            <div class="yolo-swatch is-family-monospace primary-container-color">&nbsp;</div>
         </div>
     </div>
 </div>
@@ -313,7 +314,7 @@
             <div class="yolo-swatch is-family-monospace syntax-number-oct-color">number-oct (mo)</div>
         </div>
         <div class="column">
-            <div class="yolo-swatch is-family-monospace primary-color">&nbsp;</div>
+            <div class="yolo-swatch is-family-monospace primary-container-color">&nbsp;</div>
         </div>
     </div>
 </div>
@@ -357,4 +358,5 @@
             <div class="yolo-swatch is-family-monospace syntax-operator-word-color">operator-word (ow)</div>
         </div>
     </div>
+</div>
 </div>
