--- a/_sass/yolo/brand/_theme.scss
+++ b/_sass/yolo/brand/_theme.scss
@@ -154,7 +154,7 @@
   }
 
   .yolo-tab {
-    background-color: var(--primary-container-color);
+    background-color: var(--primary-color);
     button {
       font-family: var(--font-family-secondary);
       background-color: var(--secondary-color);
