--- a/_sass/yolo/components/_other.scss
+++ b/_sass/yolo/components/_other.scss
@@ -112,57 +112,53 @@
   border-radius: 3rem;
 }
 
-// tab styling
-//.yolo-tab {
-//  overflow: hidden;
-//  border: 1px solid #ccc;
-//  background-color: #f1f1f1;
-//}
-
-///* Style the buttons that are used to open the tab content */
-//.yolo-tab button {
-//  background-color: inherit;
-//  float: left;
-//  border: none;
-//  outline: none;
-//  cursor: pointer;
-//  padding: 14px 16px;
-//  transition: 0.3s;
-//}
-//
-///* Change background color of buttons on hover */
-//.yolo-tab button:hover {
-//  background-color: #ddd;
-//}
-//
-///* Create an active/current tablink class */
-//.yolo-tab button.active {
-//  background-color: #ccc;
-//}
-//
-///* Style the tab content */
-//.yolo-tabcontent {
-//  display: none;
-//  padding: 6px 12px;
-//  border: 1px solid #ccc;
-//  border-top: none;
-//}
+.yolo-syntax-theme-swatches {
+  .column {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
 
 .yolo-tab {
   overflow: hidden;
-  button {
+  border-radius: 0.3rem;
+  margin-bottom: 1rem;
+  //padding: 0.25rem;
+  .button {
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+    padding: 0.25rem 1rem;
+    font-size: $size-6;
+    font-weight: bold;
+    border-radius: 3rem;
+
     float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
     transition: 0.3s;
+    background-color: #363636;
+    border: 1px solid transparent;
+    color: #fff;
+    cursor: pointer;
+    justify-content: center;
+    text-align: center;
+    white-space: nowrap;
+  }
+  .button:not(:last-child) {
+    margin-right: 0.25rem;
+  }
+  .button:not(:first-child) {
+    margin-left: 0.25rem;
   }
 }
 .yolo-tab-content {
   display: none;
   padding: 6px 12px;
+  border-radius: 0.3rem;
   border-top: none;
+  margin-bottom: 1rem;
+  //margin-top: 1rem;
 }
 
 
