--- a/_sass/yolo/brand/_theme.scss
+++ b/_sass/yolo/brand/_theme.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// Theme stylesheet for all elements that get special attention
+// Theme stylesheet for all elements that get "skinned".
 // ----------------------------------------------------------------------------
 // Contains selectors for all themed elements.
 // Only colors and fonts should be added here.
@@ -153,9 +153,9 @@
     }
   }
 
-  .yolo-tab {
+  .yolo-tabs {
     background-color: var(--primary-color);
-    button {
+    .yolo-tab-button {
       font-family: var(--font-family-secondary);
       background-color: var(--secondary-color);
       color: var(--on-secondary-color);
@@ -171,7 +171,10 @@
   }
   .yolo-tab-content {
     background-color: var(--primary-container-color);
-    border: none;
+    color: var(--on-primary-container-color);
+    h2, h3, h4, h5, h6 {
+      color: var(--on-primary-container-color);
+    }
   }
 
   .toggle-button {
