--- a/_sass/yolo/components/_other.scss
+++ b/_sass/yolo/components/_other.scss
@@ -15,7 +15,6 @@
   border-radius: 0.20rem;
   padding: .25rem .5rem;
   position: relative;
-  text-align: left;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
@@ -119,48 +118,48 @@
   }
 }
 
-.yolo-tab {
+// The button that opens a yolo-tab-container
+.yolo-tab-button {
+  align-items: center;
+  border-radius: 3rem;
+  border: 1px solid transparent;
+  cursor: pointer;
+  display: inline-flex;
+  float: left;
+  font-size: $size-6;
+  font-weight: bold;
+  justify-content: center;
+  margin-bottom: 0.25rem;
+  margin-top: 0.25rem;
+  padding: 0.25rem 1rem;
+  text-align: center;
+  text-decoration: none;
+  transition: 0.3s;
+  white-space: nowrap;
+}
+.yolo-tab-button:not(:last-child) {
+  margin-right: 0.5rem;
+}
+
+// A set of tab buttons
+.yolo-tabs {
   overflow: hidden;
   border-radius: 0.3rem;
   margin-bottom: 1rem;
-  //padding: 0.25rem;
-  .button {
-    display: inline-flex;
-    align-items: center;
-    text-decoration: none;
-    margin-top: 0.25rem;
-    margin-bottom: 0.25rem;
-    padding: 0.25rem 1rem;
-    font-size: $size-6;
-    font-weight: bold;
-    border-radius: 3rem;
-
-    float: left;
-    transition: 0.3s;
-    background-color: #363636;
-    border: 1px solid transparent;
-    color: #fff;
-    cursor: pointer;
-    justify-content: center;
-    text-align: center;
-    white-space: nowrap;
-  }
-  .button:not(:last-child) {
-    margin-right: 0.25rem;
-  }
-  .button:not(:first-child) {
-    margin-left: 0.25rem;
-  }
 }
+
+// The content container for a tab
 .yolo-tab-content {
   display: none;
-  padding: 6px 12px;
+  padding: 0.5rem 1rem 1rem;
   border-radius: 0.3rem;
   border-top: none;
   margin-bottom: 1rem;
-  //margin-top: 1rem;
+  h5 {
+    margin-top: .5rem;
+    margin-bottom: 1rem;
+  }
 }
-
 
 // prezo styling
 .yolo-prezo-container {
